2006-08-06 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/AvatarCamera.cpp, src/components/ogre/AvatarCamera.h, src/components/ogre/GUIManager.cpp, src/components/ogre/GUIManager.h: moved the screenshot functionality from the GUIManager to AvatarCamera where it belongs.
	* src/components/ogre/scripting/bindings/lua/AvatarCamera.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp: updated bindings
	
2006-08-06 Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/logging/LoggingService.cpp: use stringstreams for conversions

2006-08-06 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/scripting/bindings/lua/AvatarCamera.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp, src/components/ogre/scripting/bindings/lua/helpers/LuaConsoleObject.cpp, src/components/ogre/scripting/bindings/lua/helpers/LuaConsoleObject.h, src/components/ogre/scripting/bindings/lua/helpers/LuaConsoleObject.pkg, src/components/ogre/scripting/bindings/lua/helpers/lua_Helpers.cpp, src/framework/bindings/lua/lua_Framework.cpp: updated bindings

2006-08-06 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/AvatarCamera.cpp, src/components/ogre/AvatarCamera.h, src/components/ogre/AvatarController.cpp, src/components/ogre/AvatarController.h, src/components/ogre/ConsoleObjectImpl.cpp, src/components/ogre/ConsoleObjectImpl.h, src/components/ogre/GUIManager.cpp, src/components/ogre/widgets/Widget.cpp, src/services/config/ConfigService.cpp, src/services/server/OOGChat.cpp, src/services/server/ServerService.cpp, src/services/server/ServerService.h, ember.conf: removed all hard coded input mappings and replaced them with console commands

2006-08-06 Erik Hjortsberg  <erik@katastrof.nu>

	* src/framework/ConsoleBackend.cpp, src/framework/ConsoleBackend.h, src/framework/ConsoleCommandWrapper.cpp: better use of the console command descriptions.

2006-08-06 Erik Hjortsberg  <erik@katastrof.nu>
